# githubCodeownerQuery

./: .gitignore  README.md  pyproject.toml
githubquery/: withPureGithubAPI.py  withPyGithub.py
